kubernetes/console.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: utb-console
  name: utb-console
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utb-console
  template:
    metadata:
      labels:
        app: utb-console
    spec:
      containers:
      - name: utb-console
        image: iboutsikas/underthebay-console
        resources:
          requests:
            cpu: "250m"
            memory: "2Gi"
        imagePullPolicy: Always
      - name: cloud-sql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:latest
        resources:
          requests:
            cpu: "250m"
            memory: "2Gi"
        args:
          - "--structured-logs"
          - "--port=5432"
          - "utb-test-364117:us-central1:utb-test-db"
          - "--credentials-file=/secrets/service_account.json"
        volumeMounts:
          - name: sa-secret-volume
            mountPath: /secrets/
            readOnly: true
      volumes:
        - name: sa-secret-volume
          secret:
            secretName: sa-secret
