kubernetes/api.service.yml
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: api-lb
  annotations:
    cloud.google.com/backend-config: '{"default": "utb-backendconfig"}'
spec:
  selector:
    app: utb-api
  ports:
    - name: utb-api-port
      port: 8080
      targetPort: 80
